--- a/cocktail/.gitignore
+++ b/cocktail/.gitignore
@@ -19,6 +19,11 @@
 .env.test.local
 .env.production.local
 
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# IDE dosyaları (VSCode, IntelliJ, vb.)
+.idea/
+.vscode/
