--- a/cocktail/package.json
+++ b/cocktail/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Bernakaya.github.io/staj2",
+  "homepage": "http://localhost:3001",
   "name": "cocktail",
   "version": "0.1.0",
   "private": true,
@@ -33,7 +33,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build "
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
