--- a/cocktail/package.json
+++ b/cocktail/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://localhost:3001",
+  "homepage": "https://Bernakaya.github.io/staj2/",
   "name": "cocktail",
   "version": "0.1.0",
   "private": true,
