--- a/cocktail/package.json
+++ b/cocktail/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Bernakaya.github.io/staj2/",
+
   "name": "cocktail",
   "version": "0.1.0",
   "private": true,
@@ -28,12 +28,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "start": "react-scripts start --open http://localhost:3000",
+  "build": "react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
